# prompt-build-tool

./: .gitignore  ARCHITECTURE.md  README.md  example_programatic_run.py  pyproject.toml
.beads/: metadata.json
docs/: ARCHITECTURE.md  future_feat_quality_node.md  python_exec_readme.md
example_test_run/models/: article.prompt  client.py
example_test_run/templates/: expert_persona.j2
examples/generate_articles_example/: promptparams.csv.example
examples/generate_articles_example/outputs/: article.md  (+1 more)
examples/loop_model_basic/: client.py
examples/programatic/: example_programatic_run.py
examples/pyodide_smoke/: README.md  index.html  main.py  pyscript.json
examples/pyodide_wheel_smoke/: README.md  index.html  main.py  pyscript.json
examples/running_with_files/: README.md  promptparams.csv.example
pbt/: __init__.py  cli.py  db.py  docs.py  executor.py  graph.py  llm.py  parser.py  promptparams.py  rag.py  tester.py  type_hints.py  types.py  validator.py
pbt/cli/: __init__.py  init_files.py  pretty_print.py  type_hints.py  vscode.py
pbt/executor/: __init__.py  executor.py  graph.py  model_constructs.py  model_type_registry.py  parser.py  parser_initial.py  parser_model.py  quality.py
pbt/html_templates/: _nav.html  docs.html  run.html  test.html
pbt/server/: __init__.py  __main__.py  app.py
pbt/storage/: __init__.py  base.py  memory.py  sqlite.py
tests/: conftest.py  test_cli.py  test_integration_json_loop.py  test_main.py  test_promptparams.py  test_quality.py  test_run.py
utils/: __init__.py
utils/server/: __init__.py  app.py
(+20 files in other folders)
